--- a/index.html
+++ b/index.html
@@ -38,5 +38,19 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
 </body>
+<section class="container">
+  <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+    <div class="col-10 col-sm-8 col-lg-6">
+      <img src="./resources/img/Hero.PNG" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+    </div>
+    <div class="col-lg-6">
+      <h1 class="titulo display-5 fw-bold lh-1 mb-3">Responsive left-aligned hero with image</h1>
+      <p class="titulo2 lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+      <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+        <a class="buttons1 btn btn-outline-secondary btn-lg px-4" href="https://www.instagram.com/tienda.sur_hd/"><i class="bi bi-instagram"></i> instagram</a>
+      </div>
+    </div>
+  </div>
+</section>
 
 </html>
